Navigation - fix z-index position

--- a/src/app/core/components/navigation/navigation.component.scss
+++ b/src/app/core/components/navigation/navigation.component.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 1000;
 
   height: 100vh;
   width: 56px;
